<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".StudentManagementPortal.RegistrationActivity">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/enter_name"
            android:ems="15"
            android:textAllCaps="true"
            android:singleLine="true"
            android:id="@+id/edtname"
            android:imeOptions="actionNext"
            android:autofillHints="enter name" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/enter_mobile"
            android:ems="15"
            android:inputType="number"
            android:maxLength="10"
            android:textAllCaps="true"
            android:id="@+id/edtmob"
            android:imeOptions="actionNext"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/enter_e_mail"
            android:ems="30"
            android:textAllCaps="true"
            android:singleLine="true"
            android:id="@+id/edtmail"
            android:imeOptions="actionDone"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/scourse"
            android:text="@string/select_courses"
            android:textSize="25sp"
            android:paddingTop="10dp"
            android:textColor="@color/black"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/java"
                android:textSize="18sp"
                android:id="@+id/scjava"/>
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/android"
                android:layout_marginStart="25dp"
                android:textSize="18sp"
                android:id="@+id/scandroid"/>

        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Gender"
            android:textSize="25dp"
            android:textColor="@color/black"
            android:paddingTop="10dp"
            />
        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/radiogrp"
            android:checkedButton="@id/rdmale"
            android:orientation="horizontal">
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/male"
                android:textSize="20dp"
                android:id="@+id/rdmale"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/rdfemale"
                android:text="@string/female"
                android:textSize="20dp"/>

        </RadioGroup>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/submitbtn"
            android:layout_marginTop="10dp"
            android:paddingTop="10dp"
            android:textSize="25dp"
            android:text="Submit"
            android:backgroundTint="@color/gg"
            android:layout_gravity="center"/>

    </LinearLayout>

