<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:backgroundTint="@color/purple_200"
    android:layout_margin="5dp"
    app:cardCornerRadius="30dp"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:orientation="vertical"
        android:id="@+id/stdcarsupdtbtn"
        android:layout_width="match_parent"
        android:backgroundTint="@color/purple_200"
        android:padding="5dp"
        android:layout_margin="5dp"
        app:cardCornerRadius="30dp"
        android:layout_height="wrap_content"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:text="@string/name1"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:layout_height="wrap_content"
                    android:id="@+id/NamestdTV"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:text="@string/mobile1"
                    android:id="@+id/mobilestdTV"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:text="@string/gender"
                    android:textSize="18sp"
                    android:layout_height="wrap_content"
                    android:id="@+id/genderstdTV"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="450dp"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="18sp"
                        android:text="@string/email"
                        android:id="@+id/EmailstdTV"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:orientation="horizontal">
                    <LinearLayout
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="20sp"
                            android:text="@string/java1"
                            android:id="@+id/javastdTV"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="18sp"
                            android:text="@string/android1"
                            android:id="@+id/androidstdTV"/>

                    </LinearLayout>
                    <ImageView
                        android:layout_width="60dp"
                        android:layout_height="50dp"
                        android:layout_marginStart="7dp"
                        android:layout_marginTop="15dp"
                        android:src="@drawable/ne_delete_24"
                        android:id="@+id/delstdbtn"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>
