<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:id="@+id/mainll"
    android:background="@color/yel">
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:id="@+id/studentmanagementCv"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_margin="10dp"
        android:padding="30dp"
        app:cardCornerRadius="25dp"
        app:cardBackgroundColor="@color/og">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:text="@string/student_management_portal"
            android:textAlignment="center"
            android:textColor="@color/blue"
            android:textSize="25sp"
            android:textStyle="bold" />
    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:id="@+id/contactCv"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_margin="10dp"
        android:padding="30dp"
        app:cardCornerRadius="25dp"
        app:cardBackgroundColor="@color/white">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:text="@string/go_to_contacts"
            android:textAlignment="center"
            android:textColor="@color/blue"
            android:textSize="25sp"
            android:textStyle="bold" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/stateCv"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_margin="10dp"
        app:cardCornerRadius="25dp"
        app:cardBackgroundColor="@color/gg">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/go_to_states"
            android:textColor="@color/blue"
            android:textStyle="bold"
            android:textAlignment="center"
            android:paddingTop="20dp"
            android:textSize="25sp"/>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:id="@+id/companiCvm"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_margin="10dp"
        app:cardCornerRadius="25dp"
        app:cardBackgroundColor="@color/og">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/go_to_company"
            android:textColor="@color/blue"
            android:textStyle="bold"
            android:textAlignment="center"
            android:paddingTop="20dp"
            android:textSize="25sp"/>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:id="@+id/GameZCV"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_margin="10dp"
        android:padding="30dp"
        app:cardCornerRadius="25dp"
        app:cardBackgroundColor="@color/white">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:text="Game Zone"
            android:textAlignment="center"
            android:textColor="@color/blue"
            android:textSize="25sp"
            android:textStyle="bold" />
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:id="@+id/RandCV"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_margin="10dp"
        app:cardCornerRadius="25dp"
        app:cardBackgroundColor="@color/gg">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Refresh"
            android:textColor="@color/blue"
            android:textStyle="bold"
            android:textAlignment="center"
            android:paddingTop="20dp"
            android:textSize="25sp"/>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:id="@+id/UnivercityCVM"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_margin="10dp"
        app:cardCornerRadius="25dp"
        app:cardBackgroundColor="@color/og">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="University"
            android:textColor="@color/blue"
            android:textStyle="bold"
            android:textAlignment="center"
            android:paddingTop="20dp"
            android:textSize="25sp"/>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:id="@+id/new22"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_margin="10dp"
        android:padding="30dp"
        app:cardCornerRadius="25dp"
        app:cardBackgroundColor="@color/white">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:text="@string/the_biliniors"
        android:textAlignment="center"
        android:textColor="@color/blue"
        android:textSize="25sp"
        android:textStyle="bold" />
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:id="@+id/TravelCV"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_margin="10dp"
        app:cardCornerRadius="25dp"
        app:cardBackgroundColor="@color/gg">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/travel_plans"
        android:textColor="@color/blue"
        android:textStyle="bold"
        android:textAlignment="center"
        android:paddingTop="20dp"
        android:textSize="25sp"/>
    </androidx.cardview.widget.CardView>
</LinearLayout>
</ScrollView>

</LinearLayout>